--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="certifications-sub-title project-title">Project One</h2>
+            <h2 class="certifications-sub-title project-title">Handwritten Digit Recognition</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -293,7 +293,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="certifications-sub-title project-title">Project Two</h2>
+            <h2 class="certifications-sub-title project-title">Tweet Sentiment Analysis</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -312,12 +312,12 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="certifications-sub-title project-title">Project Three</h2>
+            <h2 class="certifications-sub-title project-title">Cafena: Online Coffee Shop</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
