--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     
     <!-- Certifications Section -->
     <div id="certifications-placeholder"></div>
+
+    <!-- Skills Section -->
+    <div id="skills-placeholder"></div>
     
     <!-- Projects Section -->
     <div id="projects-placeholder"></div>
@@ -48,6 +51,7 @@
         loadComponent('./components/certifications.html', 'certifications-placeholder');
         loadComponent('./components/projects.html', 'projects-placeholder');
         loadComponent('./components/contact.html', 'contact-placeholder');
+        loadComponent('./components/skills.html', 'contact-placeholder');
       });
     </script>
   </body>
