Fix: Skills Place Holder

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         loadComponent('./components/certifications.html', 'certifications-placeholder');
         loadComponent('./components/projects.html', 'projects-placeholder');
         loadComponent('./components/contact.html', 'contact-placeholder');
-        loadComponent('./components/skills.html', 'contact-placeholder');
+        loadComponent('./components/skills.html', 'skills-placeholder');
       });
     </script>
   </body>
